--- a/styles/fwrpg-for-pbta.css
+++ b/styles/fwrpg-for-pbta.css
@@ -6,7 +6,7 @@
 }
 
 .pbta.sheet:is(.actor, .item) section.window-content {
-  background-color: #f0ede7;
+  background-color: #c1ae97;
   color: #8e2231;
 }
 
