--- a/styles/fwrpg-for-pbta.css
+++ b/styles/fwrpg-for-pbta.css
@@ -1,8 +1,8 @@
 /* FWRPG Sheet changes */
 
 @font-face {
-  font-family: "RunyTunes";
-  src: url("./fonts/RunyTunesRevisitedNF.ttf") format("truetype");
+  font-family: "PoiretOne";
+  src: url("./fonts/PoiretOne-Regular.ttf") format("truetype");
 }
 
 .pbta.sheet:is(.actor, .item) section.window-content {
@@ -69,17 +69,17 @@
 }
 
 .pbta.sheet :is(.cell--attributes-top .cell__title) {
-  font: 2.1rem 'RunyTunes';
+  font: 2.1rem 'PoiretOne';
   justify-content: center;
   padding: 5px 0;
 }
 
 .pbta.sheet .cell--attributes-left .cell__title {
-  font: 1.9rem 'RunyTunes';
+  font: 1.9rem 'PoiretOne';
 }
 
 .pbta.sheet .sheet-attributes .cell--stats .stat .cell__title  {
-  font: 2.4rem 'RunyTunes';
+  font: 2.4rem 'PoiretOne';
   height: 40px;
 }
 
@@ -89,7 +89,7 @@
 
 .pbta.sheet .tabs a.item {
   align-self: center;
-  font: 2.1rem 'RunyTunes';
+  font: 2.1rem 'PoiretOne';
   height: 45px;
   margin: 0 10px 6px;
   padding: 0 0 1px;
@@ -97,7 +97,7 @@
 
 .pbta.sheet.npc .tabs a.item {
   align-self: center;
-  font: 2rem 'RunyTunes';
+  font: 2rem 'PoiretOne';
   height: 40px;
   margin: 0 10px 1px;
 }
