--- a/styles/fwrpg-for-pbta.css
+++ b/styles/fwrpg-for-pbta.css
@@ -1,13 +1,13 @@
 /* FWRPG Sheet changes */
 
 @font-face {
-  font-family: "PoiretOne";
-  src: url("./fonts/PoiretOne-Regular.ttf") format("truetype");
+  font-family: "RunyTunes";
+  src: url("./fonts/RunyTunesRevisitedNF.ttf") format("truetype");
 }
 
 .pbta.sheet:is(.actor, .item) section.window-content {
   background-color: #c1ae97;
-  color: #8e2231;
+  color: #21130d;
 }
 
 .pbta.sheet .sheet-attributes .cell--stats .stat {
@@ -44,7 +44,7 @@
 }
 
 .pbta.sheet :is(.cell__title, .tabs, input)  {
-  color: #8e2231;
+  color: #c73049;
   border-color: #8e2231;
 }
 
@@ -69,17 +69,17 @@
 }
 
 .pbta.sheet :is(.cell--attributes-top .cell__title) {
-  font: 2.1rem 'PoiretOne';
+  font: 2.1rem 'RunyTunes';
   justify-content: center;
   padding: 5px 0;
 }
 
 .pbta.sheet .cell--attributes-left .cell__title {
-  font: 1.9rem 'PoiretOne';
+  font: 1.9rem 'RunyTunes';
 }
 
 .pbta.sheet .sheet-attributes .cell--stats .stat .cell__title  {
-  font: 2.4rem 'PoiretOne';
+  font: 2.4rem 'RunyTunes';
   height: 40px;
 }
 
@@ -89,7 +89,7 @@
 
 .pbta.sheet .tabs a.item {
   align-self: center;
-  font: 2.1rem 'PoiretOne';
+  font: 2.1rem 'RunyTunes';
   height: 45px;
   margin: 0 10px 6px;
   padding: 0 0 1px;
@@ -97,7 +97,7 @@
 
 .pbta.sheet.npc .tabs a.item {
   align-self: center;
-  font: 2rem 'PoiretOne';
+  font: 2rem 'RunyTunes';
   height: 40px;
   margin: 0 10px 1px;
 }
