--- a/styles/fwrpg-for-pbta.css
+++ b/styles/fwrpg-for-pbta.css
@@ -97,9 +97,10 @@
 
 .pbta.sheet.npc .tabs a.item {
   align-self: center;
-  font: 2rem 'RunyTunes';
-  height: 40px;
-  margin: 0 10px 1px;
+  font: 2.1rem 'RunyTunes';
+  height: 45px;
+  margin: 0 10px 6px;
+  padding: 0 0 1px;
 }
 
 @keyframes swing
