--- a/styles/fwrpg-for-pbta.css
+++ b/styles/fwrpg-for-pbta.css
@@ -66,7 +66,7 @@
 
 ::-webkit-scrollbar-thumb {
   background: #8e2231;
-  border: 1px solid #257f9d;
+  border: 1px solid #c1ae97;
 }
 
 .pbta.sheet :is(.cell--attributes-top .cell__title) {
