--- a/templates/actor-sheet.hbs
+++ b/templates/actor-sheet.hbs
@@ -7,6 +7,7 @@
           <a class="item" data-tab="moves">{{localize "PBTA.Moves"}}</a>
           {{#unless isObserver}}
           <a class="item" data-tab="equipment">{{localize "PBTA.Equipment"}}</a>
+          <a class="item" data-tab="Growth">{{localize "FWRPG-SHEETS.Growth"}}</a>
           {{/unless}}
         </nav>
 
@@ -17,29 +18,29 @@
           <div class="tab description" data-group="primary" data-tab="description">
             <div class="sheet-tab">
               <div class="cell cell--bio">
-                <label class="cell__title">{{localize "MASKS-SHEETS.Look"}}</label>
-                {{editor system.attrLeft.look.value target="system.attrLeft.look.value" button=true owner=owner
+                <label class="cell__title">{{localize "FWRPG-SHEETS.Blood"}}</label>
+                {{editor system.attrTop.blood.value target="system.attrTop.blood.value" button=true owner=owner
                 editable=editable}}
               </div>
               <div class="cell cell--bio">
-                <label class="cell__title">{{localize "MASKS-SHEETS.Abilities"}}</label>
-                {{editor system.attrLeft.abilities.value target="system.attrLeft.abilities.value" button=true owner=owner
+                <label class="cell__title">{{localize "FWRPG-SHEETS.Kin"}}</label>
+                {{editor system.attrTop.kin.value target="system.attrTop.kin.value" button=true owner=owner
                 editable=editable}}
               </div>
               <div class="cell cell--bio">
-                <label class="cell__title">{{localize "MASKS-SHEETS.Backstory"}}</label>
-                {{editor system.details.biography target="system.details.biography" button=true owner=owner
+                <label class="cell__title">{{localize "FWRPG-SHEETS.Look"}}</label>
+                {{editor system.attrLeft.look target="system.attrLeft.look.value" button=true owner=owner
                 editable=editable}}
               </div>
               {{#unless isObserver}}
               <div class="cell cell--bio">
-                <label class="cell__title">{{localize "MASKS-SHEETS.TheTeam"}}</label>
-                {{editor system.details.team target="system.details.team" button=true owner=owner
+                <label class="cell__title">{{localize "FWRPG-SHEETS.Issue"}}</label>
+                {{editor system.attrTop.issue target="system.attrTop.issue.value" button=true owner=owner
                 editable=editable}}
               </div>
               <div class="cell cell--bio">
-                <label class="cell__title">{{localize "MASKS-SHEETS.Relationships"}}</label>
-                {{editor system.details.relationships target="system.details.relationships" button=true owner=owner
+                <label class="cell__title">{{localize "FWRPG-SHEETS.Doubt"}}</label>
+                {{editor system.attrTop.look target="system.attrTop.look.value" button=true owner=owner
                 editable=editable}}
               </div>
               {{/unless}}
