--- a/styles/fwrpg-for-pbta.css
+++ b/styles/fwrpg-for-pbta.css
@@ -22,7 +22,7 @@
   margin-bottom: 0;
 }
 
-pbta.sheet .sheet-resources .cell--roll-mode {
+.pbta.sheet .sheet-resources .cell--roll-mode {
   color: blue;
 }
 
