--- a/styles/fwrpg-for-pbta.css
+++ b/styles/fwrpg-for-pbta.css
@@ -27,6 +27,11 @@
   margin-bottom: 0;
 }
 
+.pbta.sheet .sheet-resources .cell--roll-mode {
+  border: solid 2px #8e2231;
+  border-radius: 10px;
+}
+
 .pbta.sheet .sheet-attributes .cell--stats .stat, .pbta.sheet .tabs .item {
   background: #8e2231;
   border-color: #8e2231;
