--- a/styles/fwrpg-for-pbta.css
+++ b/styles/fwrpg-for-pbta.css
@@ -80,17 +80,17 @@
 }
 
 .pbta.sheet :is(.cell--attributes-top .cell__title) {
-  font: 2.1rem 'Libre Caslon Text';
+  font: 2.1rem 'Cormorant Garamond';
   justify-content: center;
   padding: 5px 0;
 }
 
 .pbta.sheet .cell--attributes-left .cell__title {
-  font: 1.9rem 'Libre Caslon Text';
+  font: 1.9rem 'Cormorant Garamond';
 }
 
 .pbta.sheet .sheet-attributes .cell--stats .stat .cell__title  {
-  font: 2.4rem 'Libre Caslon Text';
+  font: 2.4rem 'Cormorant Garamond';
   height: 40px;
 }
 
@@ -100,7 +100,7 @@
 
 .pbta.sheet .tabs a.item {
   align-self: center;
-  font: 2.1rem 'Libre Caslon Text';
+  font: 2.1rem 'Cormorant Garamond';
   height: 45px;
   margin: 0 10px 6px;
   padding: 0 0 1px;
@@ -109,7 +109,7 @@
 
 .pbta.sheet.npc .tabs a.item {
   align-self: center;
-  font: 2.1rem 'Libre Caslon Text';
+  font: 2.1rem 'Cormorant Garamond';
   height: 45px;
   margin: 0 10px 6px;
   padding: 0 0 1px;
