--- a/styles/fwrpg-for-pbta.css
+++ b/styles/fwrpg-for-pbta.css
@@ -1,8 +1,8 @@
 /* FWRPG Sheet changes */
 
 @font-face {
-  font-family: "Cormorant Garamond";
-  src: url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap") format("truetype");
+  font-family: "RunyTunes";
+  src: url("./fonts/RunyTunesRevisitedNF.ttf") format("truetype");
 }
 
 .pbta.sheet:is(.actor, .item) section.window-content {
@@ -80,17 +80,17 @@
 }
 
 .pbta.sheet :is(.cell--attributes-top .cell__title) {
-  font: 2.1rem 'Cormorant Garamond';
+  font: 2.1rem 'RunyTunes';
   justify-content: center;
   padding: 5px 0;
 }
 
 .pbta.sheet .cell--attributes-left .cell__title {
-  font: 1.9rem 'Cormorant Garamond';
+  font: 1.9rem 'RunyTunes';
 }
 
 .pbta.sheet .sheet-attributes .cell--stats .stat .cell__title  {
-  font: 2.4rem 'Cormorant Garamond';
+  font: 2.4rem 'RunyTunes';
   height: 40px;
 }
 
@@ -100,7 +100,7 @@
 
 .pbta.sheet .tabs a.item {
   align-self: center;
-  font: 2.1rem 'Cormorant Garamond';
+  font: 2.1rem 'RunyTunes';
   height: 45px;
   margin: 0 10px 6px;
   padding: 0 0 1px;
@@ -109,7 +109,7 @@
 
 .pbta.sheet.npc .tabs a.item {
   align-self: center;
-  font: 2.1rem 'Cormorant Garamond';
+  font: 2.1rem 'RunyTunes';
   height: 45px;
   margin: 0 10px 6px;
   padding: 0 0 1px;
