--- a/styles/fwrpg-for-pbta.css
+++ b/styles/fwrpg-for-pbta.css
@@ -37,7 +37,7 @@
   border-color: #8e2231;
 }
 
-.pbta.sheet .sheet-attributes .cell--stats .stat :is(.cell__title, .stat-icon), .pbta.sheet .tabs .item {
+.pbta.sheet .sheet-attributes .cell--stats .stat :is(.cell__title, .stat-icon) {
   text-shadow: 0 0 5px #063c4f;
 }
 
@@ -49,9 +49,21 @@
   text-shadow: 0 0 5px #04303f;
 }
 
-.pbta.sheet :is(.sheet-attributes .cell--stats .stat, .tabs .item, .cell__title button):hover {
+.pbta.sheet :is(.sheet-attributes .cell--stats .stat, .tabs .item:not(.active), .cell__title button):hover {
   background: #c15c6c;
   color: white;
+}
+
+.pbta.sheet .tabs .item:not(.active) {
+  background: white;
+  color: #8e2231;
+  border-bottom: 2px solid #8e2231;
+}
+
+.pbta.sheet .tabs .item.active {
+  background: #8e2231;
+  text-shadow: 0 0 5px #063c4f;
+  font-weight: normal;
 }
 
 .pbta.sheet :is(.cell__title, .tabs, input)  {
@@ -59,19 +71,8 @@
   border-color: #8e2231;
 }
 
-.pbta.sheet .tabs .item:is(:hover, :focus) {
-  border-color: white;
-  border-bottom-color: #8e2231;
-}
-
 .pbta.sheet .cell__title button:hover {
   border-color: white;
-}
-
-.pbta.sheet .tabs .item.active {
-  background: white;
-  color: #8e2231;
-  border-bottom: 2px solid #8e2231;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -89,6 +90,14 @@
   font: 1.9rem 'RunyTunes';
 }
 
+.pbta.sheet .cell--attributes-left .cell__checkboxes.flexcol {
+  row-gap: 10px;
+}
+
+.pbta.sheet .cell--attributes-left .cell__checkboxes label.flexrow:has(.attr-list) {
+  align-items: flex-start;
+}
+
 .pbta.sheet .sheet-attributes .cell--stats .stat .cell__title  {
   font: 2.4rem 'RunyTunes';
   height: 40px;
@@ -96,28 +105,6 @@
 
 .pbta.sheet .sheet-attributes .cell--stats .stats-list {
   margin: 8px 0 0;
-}
-
-.pbta.sheet .cell--tempharm label.flexrow {
-  flex-wrap: nowrap; 
-  align-items: flex-start;
-  gap: 5px;
-}
-
-.pbta.sheet .cell--seriousharm label.flexrow {
-  flex-wrap: nowrap; 
-  align-items: flex-start;
-  gap: 5px;
-}
-
-.pbta.sheet .cell--deadlyharm label.flexrow {
-  flex-wrap: nowrap; 
-  align-items: flex-start;
-  gap: 5px;
-}
-
-.pbta.sheet .cell--attributes-left .flexcol {
-  gap: 10px;
 }
 
 .pbta.sheet .tabs a.item {
@@ -135,6 +122,12 @@
   height: 45px;
   margin: 0 10px 6px;
   padding: 0 0 1px;
+}
+
+.pbta.sheet .sheet-attributes .cell--stats .stat .stat-icon {
+  font-size: 32px;
+  height: 40px;
+  width: 40px;
 }
 
 @keyframes swing
@@ -221,7 +214,7 @@ span.attr-icon.attr-rollable.rollable:hover .fa-dice-d6 {
   }
 }
 
-span.stat-icon.stat-rollable.rollable:hover .fa-dice-d6 {
+.stat-rollable.rollable span.stat-icon:hover .fa-dice-d6 {
   animation: rollDice 3s linear infinite;
 }
 
@@ -231,6 +224,10 @@ span.stat-icon.stat-rollable.rollable:hover .fa-dice-d6 {
 
 .pbta.sheet :is(.cell--attributes-top, .cell--attributes-left) input:hover {
   box-shadow: 0 0 5px #c73049;
+}
+
+.pbta.sheet :is(.cell--attributes-top, .cell--attributes-left) input[type=radio]:hover {
+  box-shadow: none;
 }
 
 .pbta.sheet :is(.cell--attributes-top, .cell--attributes-left) input[type=text]:hover {
